--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-    font-family: Palatino;
+    font-family: Monoton;
     font-size: 40px;
     margin: 0.3em;
     text-align: center;
