--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@ body {
 
 h1 {
     font-family: Monoton;
-    font-size: 40px;
+    font-size: 50px;
     margin: 0.3em;
     text-align: center;
     padding-bottom: 1%;
     border: 1px dotted rgb(117, 119, 119);
     border-radius: 10px;
     background-color: rgb(117, 119, 119);
-    color:white;
+    color:#D4FDE4;
 
 }
 
